Build: Provide Makefile extensibility for custom BIOS & IPC versions
Provide build extensibility to choose your own BIOS or IPC versions.
This would allow an user easier build integration without having to
modify the Makefile for either of BIOS or IPC versions.

The Makefile extensibility for XDC is already in place, and it is
now provided for BIOS and IPC as well through the environment
variables BIOSVERSION & IPCVERSION. These are optional, and if not
defined, the build will pick up the default versions defined in the
Makefile.
    Eg:
        export BIOSVERSION=bios_6_32_01_38
        export IPCVERSION=ipc_1_23_01_26

The README has also been updated to reflect the latest changes.

Signed-off-by: Suman Anna <s-anna@ti.com>

--- a/README
+++ b/README
@@ -91,11 +91,13 @@ BUILD (Linux Environment)
        Eg:
            export XDCVERSION=xdctools_3_22_01_21
 
-    4) Edit Makefile (optional) so that the following variables are pointing to
-       the correct tools versions. The XDCROOTVER and REPO variables are
-       automatically set based on the exported variables in steps #2 & #3.
-       - BIOSPRODVER
-       - IPCPRODVER
+    4) Export the proper environment variable(s) to choose your own versions of
+       BIOS and/or IPC tools (optional, need to set only if different from
+       default is desired)
+       Eg:
+           export BIOSVERSION=bios_6_32_01_38
+                     - and/or -
+           export IPCVERSION=ipc_1_23_01_26
 
     5) From the top-level sysbios-rpmsg directory, type in 'make' to build the
        entire tree plus sample applications
