--- a/README
+++ b/README
@@ -40,20 +40,24 @@ TOOLS
 
     o The following are the current versions and download instructions for these
       tools.
-       1) BIOS:  6.32.01.38
+       1) BIOS: 6.32.01.38
             Linux:   http://software-dl.ti.com/dsps/dsps_public_sw/sdo_sb/targetcontent/bios/sysbios/6_32_01_38/exports/bios_setuplinux_6_32_01_38.bin
             Windows: http://software-dl.ti.com/dsps/dsps_public_sw/sdo_sb/targetcontent/bios/sysbios/6_32_01_38/exports/bios_setupwin32_6_32_01_38.exe
 
-       2) XDC: 3.22.03.41
-            Linux:   http://software-dl.ti.com/dsps/dsps_public_sw/sdo_sb/targetcontent/rtsc/3_22_03_41/exports/xdctools_setuplinux_3_22_03_41.bin
-            Windows: http://software-dl.ti.com/dsps/dsps_public_sw/sdo_sb/targetcontent/rtsc/3_22_03_41/exports/xdctools_setupwin32_3_22_03_41.exe
+       2) XDC:  3.23.02.47
+            Linux:   http://software-dl.ti.com/dsps/dsps_public_sw/sdo_sb/targetcontent/rtsc/3_23_02_47/exports/xdctools_setuplinux_3_23_02_47.bin
+            Windows: http://software-dl.ti.com/dsps/dsps_public_sw/sdo_sb/targetcontent/rtsc/3_23_02_47/exports/xdctools_setupwin32_3_23_02_47.exe
 
-       3) CGT TMS470: 4.9.0
+       3) IPC:  1.24.02.27
+            Linux:   http://software-dl.ti.com/dsps/dsps_public_sw/sdo_sb/targetcontent/ipc/1_24_02_27/exports/ipc_setuplinux_1_24_02_27.bin
+            Windows: http://software-dl.ti.com/dsps/dsps_public_sw/sdo_sb/targetcontent/ipc/1_24_02_27/exports/ipc_setupwin32_1_24_02_27.exe
+
+       4) CGT TMS470: 4.9.0
             TMS470 Compiler is not available for free publicly. Please contact
             your TI representative. A TMS470 Compiler is supplied with Code
             Composer Studio (CCS), and can be used if you have a valid license.
 
-       4) CGT C6000: 7.2.0
+       5) CGT C6000: 7.2.0
             Please pick the appropriate version from the above public link.
 
 
