Build: Select build targets based on CGT environment variables
The build targets are chosen depending on whether its code generation
tools environment variable is set or not. This enables an user to do
a minimal build only for the target that the user is interested in.

In a clean build:
- If only TMS470CGTOOLPATH is set, only M3 target will be built.
- If only C6000CGTOOLPATH is set, only C64 target will be  built
- If both tool path environment variables are set, both C64T and M3
  targets will be built

In a dirty build:
- In order to enable or disable a target, an user would need to export
  or unset the corresponding tool path variable, and touch the
  src/config.bld to have the change become effective.

Signed-off-by: Juan Gutierrez <jgutierrez@ti.com>
Signed-off-by: Suman Anna <s-anna@ti.com>

--- a/README
+++ b/README
@@ -73,9 +73,14 @@ TOOLS
 
 BUILD (Linux Environment)
     1) Export the proper environment variables to point to your Code Generation
-       Tools installation paths (if different from the default)
+       Tools installation paths (mandatory step). The build targets are controlled
+       based on which environment variables are defined. The TMS470CGTOOLPATH enables
+       the M3 target build, while the C6000CGTOOLPATH enables the C6x build. If the
+       variables are exported in between builds on an existing shell, do 'touch' the
+       <sysbios-rpmsg>/src/config.bld for the change to become effective.
        Eg:
            export TMS470CGTOOLPATH=/data/omapts/linux/dsp-tc/cgtarm-4.9.0
+                               -- and/or --
            export C6000CGTOOLPATH=/data/omapts/linux/dsp-tc/cgt6x-7.2.0
 
     2) Export the proper environment variable to point to your installation path
