Build: Update the default installation folder
The default installation location for all the new tools
is /opt/ti (installed as root). The build system has been
updated to reflect this location as the default value for
the BIOSTOOLSROOT variable. This environment variable need
not be defined if all tools are installed using the default
location.

The only exception at present is the ARM Code Generation
Tools whose installation location is /opt/TI. This has been
corrected in newer versions of the ARM CGT, but for now
requires the installation location to be changed manually
to /opt/ti.

Signed-off-by: Suman Anna <s-anna@ti.com>

--- a/README
+++ b/README
@@ -81,7 +81,7 @@ BUILD (Linux Environment)
 
     2) Export the proper environment variable to point to your installation path
        for all the BIOS-side tools (optional, MUST set if your installation path
-       is different from the default install location - /usr/local). All the
+       is different from the default install location - /opt/ti). All the
        above tools are expected to be installed in the same path. Note that the
        path should not end with a trailing '/'.
        Eg:
